# ipbd-project

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  run_pipeline.sh  setup.sh  setup.sql  setup_gx.py
airflow/dags/: batch_ingest.py  ml_retrain.py  ml_retrain_stream.py
config/: api_settings.yaml  locations.json
dags/: batch_aqi_pipeline.py
data/: ispu_jakarta_historis.csv
data/raw/: ispu_jakarta_historis.csv
docs/: architecture.md  batch_vs_stream.md  dashboard.md  link_GDrive.txt  link_GitHub.txt  metadata.md  run batch_etl.txt  run batch_extract.txt  run-demo.md  security_measures.md  troubleshooting.md
grafana/dashboards/: air-quality-surakarta.json  dashboards.yml
grafana/datasources/: datasource.yml
gx/expectations/: .ge_store_backend_id  aqi_suite.json
gx/uncommitted/: config_variables.yml
gx/uncommitted/validations/: .ge_store_backend_id
gx/uncommitted/validations/aqi_suite/__none__/20260518T004505.765528Z/: csv_data_source-ispu_data_asset.json
ml/: ge_validation.py  ispu.py  predict.py  requirements.txt  train.py  validation.py
producer/: api_ingestor.py  requirements.txt  sensor_simulator.py  test_api.py
prometheus/: alertmanager.yml  alertmanager.yml.tmpl  aqi_exporter.py  prometheus.yml
prometheus/rules/: aqi_alerts.yml
scripts/: generate_configs.py  run_batch.ps1  run_ml.ps1  telegram_alert.py
spark/: batch_etl.py  batch_extract.py  stream_processor.py  submit_streaming.sh
sql/: setup.sql
