[project]
name = "aqi-watch"
version = "1.0.0"
description = "Air Quality Monitoring & Prediction — Surakarta ISPU"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
batch = [
    "pyspark>=4.0.0",
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]
ml = [
    "scikit-learn>=1.4.0",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "scipy>=1.12.0",
    "mlflow>=2.17.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
]
stream = [
    "kafka-python>=2.0.2",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]
dev = [
    "pyspark>=4.0.0",
    "boto3>=1.34.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "mlflow>=2.17.0",
    "psycopg2-binary>=2.9.9",
    "kafka-python>=2.0.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

[tool.pylance]
typeCheckingMode = "basic"

[tool.setuptools.packages.find]
exclude = ["*"]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"
